Fixed some spacing issue on the category tabs

--- a/css/jquery.emojipicker.css
+++ b/css/jquery.emojipicker.css
@@ -12,7 +12,7 @@
 .emojiPicker .hidden {display:none;}
 
 .emojiPicker nav {display:flex; position:relative; z-index:0; background-color:#eee; border-top-left-radius:4px; border-top-right-radius:4px; border-bottom:1px solid #ddd;}
-.emojiPicker nav div.tab {position:relative; flex-grow:1; top:1px; display:inline-block; margin:2% 0 0 0; padding:2% 2% 1% 2%; text-align:center; border:1px solid #eee; border-top-left-radius:4px; border-top-right-radius:4px; cursor:pointer;}
+.emojiPicker nav div.tab {position:relative; flex-grow:1; top:1px; display:inline-block; margin:3px 0 0 0; padding:2% 2% 1% 2%; text-align:center; border:1px solid #eee; border-top-left-radius:4px; border-top-right-radius:4px; cursor:pointer;}
 .emojiPicker nav div.tab:hover  {background-color:#ddd;}
 .emojiPicker nav div.tab.active {background-color:#fff; box-shadow:0 0 3px #ccc; border:1px solid #ddd; border-bottom:none;}
 .emojiPicker nav div.tab:first-of-type {margin-left:1%;}
